# Easy-Web

back_server/: app.py  pyproject.toml
front_server/: index.js  main.html  package.json
sho_mi/: README.md  package-lock.json  package.json
sho_mi/src/: App.vue
vue_front/: package-lock.json  package.json
vue_front/src/: App.vue  main.js
vue_front/src/components/Layout/: MainHeader.vue  MainLayout.vue  MainSidebar.vue
vue_front/src/components/page/: DpPage.vue
