[tool.poetry]
name = "back_server"
version = "0.1.0"
description = ""
authors = ["wkd3475 <wkd3475@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
requests = "^2.27.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
